--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>     
-    <title>Cronomêtro</title>
+    <title>Cronômetro</title>
 </head>
 <body>
-    
     <div class="conteiner">
-        <div class="watch">00.00.00</div>
+        <div id="watch">00:00:00</div>
         <button class="bt_iniciar" onclick="init()">Iniciar</button>
         <button class="bt_pausar" onclick="pause()">Pausar</button>
-        <button class="bt_sair"  onclick="clearAll()">Sair</button>  
+        <button class="bt_sair" onclick="clearAll()">Zerar</button>  
     </div>    
-
-    
+    <script src="script.js"></script>   
 </body>
 </html>
